--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Recent news"
+title                    : "Josefina Lacasa"
 title_separator          : "-"
 name                     : &name "Josefina"
 description              : &description "personal description"
