--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Josefina Lacasa"
   avatar           : "profile.png"
-  bio              : "PhD candidate in Agronomy, Kansas State University"
+  bio              : "Agricultural Statistics"
   location         : "Manhattan, KS, USA"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
