--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-  - title: "Bio"
-    url: /bio/
+  - title: "About"
+    url: /about/
     
 #  - title: "About"
 #    url: /about/
